crates/bitnet-kernels/tests/snapshots/snapshot_tests__fallback_kernel_name_is_stable.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: "format!(\"has_fallback={}\",\nproviders.iter().any(|p| p.contains(\"fallback\") || p.contains(\"cpu\")))"
---
has_fallback=true
