crates/bitnet-kernels/tests/snapshots/snapshot_tests__gpu_info_any_available_cuda.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: "format!(\"{}\", info.any_available())"
---
true
