crates/bitnet-kernels/tests/snapshots/snapshot_tests__gpu_info_cuda_only.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: info
---
GpuInfo {
    cuda: true,
    cuda_version: Some(
        "12.4",
    ),
    metal: false,
    rocm: false,
    rocm_version: None,
    opengl: false,
    wgpu: false,
}
