crates/bitnet-kernels/tests/snapshots/snapshot_tests__gpu_info_no_gpu.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: info
---
GpuInfo {
    cuda: false,
    cuda_version: None,
    metal: false,
    rocm: false,
    rocm_version: None,
    opengl: false,
    wgpu: false,
}
