crates/bitnet-kernels/tests/snapshots/snapshot_tests__gpu_info_summary_no_gpu.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: info.summary()
---
No GPU backends available
