crates/bitnet-kernels/tests/snapshots/snapshot_tests__kernel_manager_has_at_least_one_provider.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: "format!(\"count={} has_providers={}\", providers.len(), !providers.is_empty())"
---
count=2 has_providers=true
