crates/bitnet-kernels/tests/snapshots/snapshot_tests__select_best_returns_a_provider.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: "format!(\"ok={}\", result.is_ok())"
---
ok=true
