crates/bitnet-kernels/tests/snapshots/snapshot_tests__selected_provider_name_non_empty_after_selection.snap
---
source: crates/bitnet-kernels/tests/snapshot_tests.rs
expression: "format!(\"some={} non_empty={}\", name.is_some(),\nname.map(|n| !n.is_empty()).unwrap_or(false))"
---
some=true non_empty=true
